--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     </header>
     <div class="container">
         <div class="calc">
-            <div class="res">0</div>
+            <div class="res"></div>
             <div class="buttons">                
-                <button class="btn span2 op">C</button>
-                <button class="btn op">&larr;</button>
-                <button class="btn op">÷</button>
-                <button class="btn num">7</button>
-                <button class="btn num">8</button>
-                <button class="btn num">9</button>
-                <button class="btn op">x</button>
-                <button class="btn num">4</button>
-                <button class="btn num">5</button>
-                <button class="btn num">6</button>
-                <button class="btn op">-</button>
-                <button class="btn num">1</button>
-                <button class="btn num">2</button>
-                <button class="btn num">3</button>
-                <button class="btn op">+</button>
-                <button class="btn span2 num">0</button>
-                <button class="btn">,</button>
-                <button class="btn eq">=</button>
+                <button class="btn span2 op" onclick="limpa()">C</button>
+                <button class="btn op" onclick="corrige()">&larr;</button>
+                <button class="btn op" onclick="divi()">÷</button>
+                <button class="btn num" onclick="sete()">7</button>
+                <button class="btn num" onclick="oito()">8</button>
+                <button class="btn num" onclick="nove()">9</button>
+                <button class="btn op" onclick="mult()">x</button>
+                <button class="btn num" onclick="quatro()">4</button>
+                <button class="btn num" onclick="cinco()">5</button>
+                <button class="btn num" onclick="seis()">6</button>
+                <button class="btn op" onclick="subt()">-</button>
+                <button class="btn num" onclick="um()">1</button>
+                <button class="btn num" onclick="dois()">2</button>
+                <button class="btn num" onclick="tres()">3</button>
+                <button class="btn op" onclick="soma()">+</button>
+                <button class="btn span2 num" onclick="zer0()">0</button>
+                <button class="btn num" onclick="virg()">,</button>
+                <button class="btn eq" onclick="igual2()">=</button>
             </div>
         </div>
     </div>
